<resources>
    <string name="app_name">Lab08SharedPreferences</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="lul">LUL</string>
    <string name="title_activity_menu">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="my_data">My data</string>
    <string name="bienvenido">Bienvenido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
