<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_data"
            android:icon="@drawable/ic_info"
            android:title="@string/my_data" />

    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
